deploy/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingresso-front
  labels:
    app: ingresso-front
spec:
  selector:
    matchLabels:
      app: ingresso-front
  replicas: 
  template:
    metadata:
      labels:
        app: ingresso-front
    spec:
      containers:
        - name: ingresso-front
          image: ingresso/ingresso-front:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 512M
            limits:
              cpu: 700m
              memory: 700M
