deploy/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingresso-front-service
spec:
  selector:
    app: ingresso-front
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
