deploy/ingresso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresso-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service: 
              name: ingresso-front-service
              port: 
                number: 80
        - path: /?(.*)
          pathType: Prefix
          backend:
            service: 
              name: ingresso-api-service
              port: 
                number: 8080
